--- a/index.html
+++ b/index.html
@@ -1,467 +1,18 @@
-<!DOCTYPE html>
-
-
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Sexually Explicit</title>
-    <script type="text/javascript" src="http://wac.3adc.edgecastcdn.net/803ADC/cs1/preland/js/jquery-1.11.2.min.js"></script>
-    <style>
-        #choices input:checked:before {
-            background-image: url(http://wac.3adc.edgecastcdn.net/803ADC/cs1/preland/img/v13//check.png);
-        }
-        @charset "UTF-8";
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            color: #474747;
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            overflow: auto;
-            -webkit-user-select: none;
-        }
-        html {
-            background: #f5f5f5;
-        }
-        body {
-            background-image: url(http://68.media.tumblr.com/ab263f5cb1bf7a247393fd82dfe645d1/tumblr_okyukvSUtJ1vyizvyo1_500.gif);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-            background-color: #999;
-        }
-        div,
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: exo, sans-serif;
-        }
-        .wrapper {
-            height: 100%;
-            width: 100%;
-        }
-        .message {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            width: 100%;
-            height: 45%;
-            bottom: 0;
-            display: block;
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.6);
-            color: #fff;
-            padding: 0.5em;
-        }
-        #splash,
-        #geo,
-        #ok,
-        #questions,
-        #questions [class^=q]:not(.current),
-        #choices,
-        #choices [class^=c]:not(.current),
-        #congrats {
-            display: none;
-        }
-        #content {
-            padding: 15px;
-        }
-        #bg {
-            width: 100%;
-            height: 20%;
-            position: center;
-            top: 0;
-            left: 0;
-            z-index: -100;
-        }
-        .box {
-            max-width: 600px;
-            margin: 0px auto 0;
-            text-align: center;
-            border-radius: 5px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        }
-        .box.wide {
-            max-width: 560px;
-            width: 100%;
-        }
-        .box h2 {
-            margin: 0;
-            padding: 20px;
-            font-size: 18px;
-            font-weight: 500;
-            text-align: center;
-        }
-        .box:not(#geo) h2,
-        #questions ul {
-            border: 1px solid #d1d1d1;
-            border-radius: 5px 5px 0 0;
-        }
-        .box:not(#splash):not(#geo) h2,
-        #questions ul {
-            color: #fff;
-            background: rgba(0, 0, 0, 0);
-        }
-        .box p {
-            margin: 0;
-            padding: 20px 20px 30px;
-            background: rgba(255, 255, 255, 0.9);
-            border-left: 1px solid #d1d1d1;
-            border-right: 1px solid #d1d1d1;
-            font-size: 16px;
-            line-height: 20px;
-            text-align: left;
-        }
-        .box p:last-of-type {
-            padding: 10px;
-            border: 1px solid #d1d1d1;
-            border-radius: 0 0 5px 5px;
-            text-align: center;
-        }
-        .box span {
-            color: #5aabe1;
-        }
-        .box button {
-            margin: 0;
-            padding: 10px 12px;
-            width: 160px;
-            height: 60px;
-            background: transparent;
-            border: 1px solid #d1d1d1;
-            border-radius: 5px;
-            font-size: 20px;
-            font-weight: bold;
-            text-transform: uppercase;
-            cursor: pointer;
-            outline: none;
-        }
-        .box button {
-            color: #fff;
-            background: rgba(92, 184, 92, 0.9);
-        }
-        .box button:nth-of-type(2) {
-            margin-left: 10px;
-        }
-        #splash h2 {
-            background: rgba(255, 255, 255, 0.9);
-        }
-        #ok h2 {
-            padding: 20px 0;
-        }
-        #geo {
-            background: rgba(255, 255, 255, 0.9);
-            border: 1px solid #d1d1d1;
-            border-radius: 5px;
-        }
-        #geo h2 {
-            display: inline-block;
-            font-size: 22px;
-            line-height: 28px;
-        }
-        .pin-wrap {
-            display: inline-block;
-            width: 180px;
-            height: 180px;
-            vertical-align: middle;
-        }
-        .pin {
-            width: 100%;
-            position: relative;
-            top: -15px;
-            vertical-align: middle;
-        }
-        #questions ul {
-            margin: 0;
-            padding: 20px;
-            list-style: none;
-        }
-        #questions ul li {
-            display: inline;
-            padding: 4px 10px;
-            margin: 10px;
-            color: rgba(217, 52, 159, 0.9);
-            background: rgba(255, 255, 255, 0.5);
-            border-radius: 100%;
-            font-size: 22px;
-        }
-        #questions ul li.current {
-            /*color: #000 */
-            
-            background: #fff;
-        }
-        #questions button:nth-of-type(2) {
-            background: rgba(217, 83, 79, 0.9);
-        }
-        #choices p {
-            text-align: center;
-        }
-        #choices input {
-            display: none;
-        }
-        #choices label {
-            display: block;
-            height: 30px;
-            margin: 10px 0;
-            padding-left: 65px;
-            text-align: left;
-        }
-        #choices label:before {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-            content: "";
-            border: 1px solid #d1d1d1;
-            box-sizing: border-box;
-            text-align: center;
-            font-size: 22px;
-            vertical-align: -8px;
-            visibility: visible;
-        }
-        #choices input:checked + label:before {
-            content: "";
-            background-color: #3091c9;
-            background-image: url("http://wac.3adc.edgecastcdn.net/803ADC/cs1/preland/img/v10/check.png");
-            background-size: 22px;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        #choices p label:first-of-type {
-            margin-top: 20px;
-        }
-        @media screen and (min-width: 640px) {
-            #bg {
-                max-width: 674px;
-                left: 50%;
-                margin-left: -337px;
-            }
-            .box button:hover {
-                background: rgba(88, 155, 87, 0.9);
-            }
-            #questions button:nth-of-type(2):hover {
-                background: rgba(180, 80, 78, 0.9);
-            }
-            #choices input:not(:checked):hover:before {
-                border: 2px solid #3091c9;
-            }
-        }
-        @media screen and (max-width: 480px) {
-            .pin-wrap {
-                width: 120px;
-                height: 120px;
-            }
-            .pin {
-                top: -30px;
-            }
-            .box,
-            .box.wide {
-                margin: 125px auto 0;
-                max-width: 315px;
-                /*max-width: none;*/
-            }
-            .box button {
-                width: 125px;
-            }
-            #geo h2 {
-                font-size: 20px;
-            }
-            #choices label {
-                padding-left: 20px;
-            }
-        }
-        @media screen and (max-width: 320px) {
-            #content {
-                padding: 10px;
-            }
-            h2 {
-                font-size: 17px!important;
-            }
-            /*# sourceMappingURL=style.css.map */
-    </style>
-</head>
-
-<body>
-
-    <div id="content">
-
-        <div id="bg"></div>
-
-        <div id="splash" class="box">
-            <h2>Attention!</h2>
-            <center>
-                <p><span> Can You Hand It if She</span> Wants to trade her nude pics with you.
-                    <br>
-                    <br> Do you accept?</p>
-            </center>
-            <p>
-
-                <button>Yes</button>
-            </p>
-        </div>
-
-        <div id="geo" class="box wide">
-            <h2>Finding Horny Women Near <br> <span>Your Area</span></h2>
-            <div class="pin-wrap"><img class="pin" style="display: none" src="http://wac.3adc.edgecastcdn.net/803ADC/cs1/preland/img/v13//pin.gif?1487732021">
-            </div>
-        </div>
-
-        <div id="ok" class="box">
-            <h2>This is Fuck Site!</h2>
-            <center>
-                <p>Before we can show you nude pics of horny women in your area that want to fuck right now, we need to ask a few quick questions.</p>
-            </center>
-            <p>
-                <button>OK!</button>
-            </p>
-        </div>
-
-        <div id="questions" class="box">
-            <ul>
-                <li class="current">1</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
-            <p class="q1 current">The women on this site are horny cheating girlfriends and single moms looking to fuck all the time. Do you want to Continue?</p>
-            <p class="q2">The women on this site are not at all interested in a "relationship" and are only looking to fuck. Are you OK with this request?</p>
-            <p class="q3">Do you agree to practice safe sex with the women you meet on this site?</p>
-            <p class="q4">Are you 21 years of age or older? The women on this site are not interested in men younger than that due to rude and immature behavior in the past.</p>
-            <p>
-                <button>Yes</button>
-                <button>No</button>
-            </p>
-        </div>
-
-        <div id="choices" class="box">
-            <h2 class="c1 current">What is your ideal body type?</h2>
-            <h2 class="c2">What age group are you most attracted to?</h2>
-            <h2 class="c3">What kind of relationship are you looking for?</h2>
-            <h2 class="c4">What is the ideal distance between you and her?</h2>
-            <p class="c1 current">
-                (You may choose more than one)
-                <br>
-                <input id="in1" type="checkbox">
-                <label for="in1">Thin</label>
-                <input id="in2" type="checkbox">
-                <label for="in2">Curvy</label>
-                <input id="in3" type="checkbox">
-                <label for="in3">Big Tits</label>
-                <input id="in4" type="checkbox">
-                <label for="in4">Huge Ass</label>
-            </p>
-            <p class="c2">
-                (You may choose more than one)
-                <br>
-                <input id="in5" type="checkbox">
-                <label for="in5">18 - 22</label>
-                <input id="in6" type="checkbox">
-                <label for="in6">22 - 28</label>
-                <input id="in7" type="checkbox">
-                <label for="in7">28 - 34</label>
-                <input id="in8" type="checkbox">
-                <label for="in8">34 - 40</label>
-                <input id="in9" type="checkbox">
-                <label for="in9">40+</label>
-            </p>
-            <p class="c3">
-                (You may choose more than one)
-                <br>
-                <input id="in10" type="checkbox">
-                <label for="in10">Random Hookup</label>
-                <input id="in11" type="checkbox">
-                <label for="in11">Friends With Benefits</label>
-                <input id="in12" type="checkbox">
-                <label for="in12">One Night Stand</label>
-                <input id="in13" type="checkbox">
-                <label for="in13">Fuckbuddy</label>
-            </p>
-            <p class="c4">
-                (You may choose more than one)
-                <br>
-                <input id="in14" type="checkbox">
-                <label for="in14">A few blocks away</label>
-                <input id="in15" type="checkbox">
-                <label for="in15">In the same neighborhood</label>
-                <input id="in16" type="checkbox">
-                <label for="in16">In the same city</label>
-                <input id="in17" type="checkbox">
-                <label for="in17">Within 60 miles</label>
-            </p>
-            <p>
-                <button>Next</button>
-            </p>
-        </div>
-
-        <div id="congrats" class="box">
-            <h2>Congratulations!</h2>
-            <p>You have qualified to enter our site. Please click Continue to complete the registration process.
-                <br>
-                <br> VERY IMPORTANT! Remember you must keep the identities of women you see on here a secret.</p>
-            <p>
-                <button>Continue</button>
-            </p>
-        </div>
-
-    </div>
-
-    <script>
-        $(function() {
-            $('#splash').delay(100).fadeIn(200);
-        });
-
-        $('#splash button').click(function() {
-            $('#splash').fadeOut(200);
-            $('#geo').delay(200).fadeIn(function() {
-                $('.pin').show();
-            });
-            setTimeout(function() {
-                $('#geo').fadeOut(200);
-                $('#ok').delay(200).fadeIn();
-            }, 5000);
-        })
-
-        $('#ok button').click(function() {
-            document.location.assign("http://trackdirectlink.site/YVOCnSM6qivK");
-
-            return false;
-        })
-
-        $('#questions button').click(function() {
-            next('#questions', 'li', 'p', 'q4');
-        })
-
-        $('#choices button').click(function() {
-            next('#choices', 'h2', 'p', 'c4');
-        })
-
-        function next(a, b, c, d) {
-            var w = $(a + ' ' + b + '.current'),
-                x = w.next(b),
-                y = $(a + ' ' + c + '.current'),
-                z = y.next(c);
-            if (z.hasClass(d)) {
-                $(a).hide();
-                $(a).next('.box').show();
-            } else {
-                w.removeClass('current');
-                x.addClass('current');
-                y.removeClass('current');
-                z.addClass('current');
-            }
-        }
-
-        $('#congrats button').click(function() {
-            document.location.assign("http://trackdirectlink.site/YVOCnSM6qivK");
-
-            return false;
-        })
-    </script>
-
-</body>
-
-</html>
+<div style="text-align: center;">
+<span style="font-size: x-large;"><b><span style="background-color: yellow;">18</span><span style="background-color: #d9d2e9; color: red;">+</span></b></span><a href="http://seeyouagainsayang.blogspot.com/"><img border="0" src="http://1.bp.blogspot.com/-icxkAN0R2pg/ViTnksmwHTI/AAAAAAAAADU/eXVCeP3snmo/s320/ezgif.com-resize%2B%25286%2529.gif" /></a></div>
+<div style="text-align: center;">
+<span style="font-size: large;">A fun and friendly site to meet singles, Hot Videos, swingers, Flirting and <span style="background-color: #eeeeee;"><span style="color: orange;"><i><b>SEX</b></i></span> </span>dating!</span></div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="http://trackdirectlink.site/YVOCnSM6qivK"><img border="0" height="640" src="http://2.bp.blogspot.com/-Tzu4wpuH1Gk/ViToYu6BRwI/AAAAAAAAADc/Jv3a6sWf07k/s640/ezgif.com-resize%2B%25287%2529.gif" width="474" /></a></div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="http://ow.ly/xIV330a6ydg"><img border="0" height="180" src="http://3.bp.blogspot.com/-aq0wtzZWSWo/ViTo1XuekwI/AAAAAAAAADk/_TY6wRbV-Zo/s320/6d6pcr.gif" width="320" /></a></div>
+<div class="separator" style="clear: both; text-align: center;">
+<br /></div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="http://ow.ly/xIV330a6ydg"><img border="0" height="68" src="http://3.bp.blogspot.com/-kv0OCmXWUKo/ViTpB-855rI/AAAAAAAAADs/_whHtC_EGao/s200/ezgif.com-crop.jpg" width="200" /></a></div>
+<div class="separator" style="clear: both; text-align: center;">
+<br /></div>
+<div class="separator" style="clear: both; text-align: center;">
+<br /></div>
+<div style="text-align: center;">
+<span style="font-size: large;"><br /></span></div>
