--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <div style="text-align: center;">
-<span style="font-size: x-large;"><b><span style="background-color: yellow;">18</span><span style="background-color: #d9d2e9; color: red;">+</span></b></span><a href="http://seeyouagainsayang.blogspot.com/"><img border="0" src="http://1.bp.blogspot.com/-icxkAN0R2pg/ViTnksmwHTI/AAAAAAAAADU/eXVCeP3snmo/s320/ezgif.com-resize%2B%25286%2529.gif" /></a></div>
+<span style="font-size: x-large;"><b><span style="background-color: yellow;">18</span><span style="background-color: #d9d2e9; color: red;">+</span></b></span><a href="http://ow.ly/xIV330a6ydg"><img border="0" src="http://1.bp.blogspot.com/-icxkAN0R2pg/ViTnksmwHTI/AAAAAAAAADU/eXVCeP3snmo/s320/ezgif.com-resize%2B%25286%2529.gif" /></a></div>
 <div style="text-align: center;">
 <span style="font-size: large;">A fun and friendly site to meet singles, Hot Videos, swingers, Flirting and <span style="background-color: #eeeeee;"><span style="color: orange;"><i><b>SEX</b></i></span> </span>dating!</span></div>
 <div class="separator" style="clear: both; text-align: center;">
-<a href="http://trackdirectlink.site/YVOCnSM6qivK"><img border="0" height="640" src="http://2.bp.blogspot.com/-Tzu4wpuH1Gk/ViToYu6BRwI/AAAAAAAAADc/Jv3a6sWf07k/s640/ezgif.com-resize%2B%25287%2529.gif" width="474" /></a></div>
+<a href="http://ow.ly/xIV330a6ydg"><img border="0" height="640" src="http://2.bp.blogspot.com/-Tzu4wpuH1Gk/ViToYu6BRwI/AAAAAAAAADc/Jv3a6sWf07k/s640/ezgif.com-resize%2B%25287%2529.gif" width="474" /></a></div>
 <div class="separator" style="clear: both; text-align: center;">
-<a href="http://ow.ly/xIV330a6ydg"><img border="0" height="180" src="http://3.bp.blogspot.com/-aq0wtzZWSWo/ViTo1XuekwI/AAAAAAAAADk/_TY6wRbV-Zo/s320/6d6pcr.gif" width="320" /></a></div>
+<a href="http://seeyouagainsayang.blogspot.com/"><img border="0" height="180" src="http://3.bp.blogspot.com/-aq0wtzZWSWo/ViTo1XuekwI/AAAAAAAAADk/_TY6wRbV-Zo/s320/6d6pcr.gif" width="320" /></a></div>
 <div class="separator" style="clear: both; text-align: center;">
 <br /></div>
 <div class="separator" style="clear: both; text-align: center;">
