--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="separator" style="clear: both; text-align: center;">
 <a href="http://ow.ly/xIV330a6ydg"><img border="0" height="640" src="http://2.bp.blogspot.com/-Tzu4wpuH1Gk/ViToYu6BRwI/AAAAAAAAADc/Jv3a6sWf07k/s640/ezgif.com-resize%2B%25287%2529.gif" width="474" /></a></div>
 <div class="separator" style="clear: both; text-align: center;">
-<a href="http://seeyouagainsayang.blogspot.com/"><img border="0" height="180" src="http://3.bp.blogspot.com/-aq0wtzZWSWo/ViTo1XuekwI/AAAAAAAAADk/_TY6wRbV-Zo/s320/6d6pcr.gif" width="320" /></a></div>
+<a href="http://ow.ly/xIV330a6ydg"><img border="0" height="180" src="http://3.bp.blogspot.com/-aq0wtzZWSWo/ViTo1XuekwI/AAAAAAAAADk/_TY6wRbV-Zo/s320/6d6pcr.gif" width="320" /></a></div>
 <div class="separator" style="clear: both; text-align: center;">
 <br /></div>
 <div class="separator" style="clear: both; text-align: center;">
